Feat: swagger추가, 카테고리별 랜덤조회 서비스 유저아이디 추가